tests/errors/optional_01.joyeer
// 'nil' cannot initialize specified type 'Int'
var index:Int = nil

var index2 = nil
